Fix datepicker z-index issue

--- a/src/BudgetTool/Content/Site.less
+++ b/src/BudgetTool/Content/Site.less
@@ -24,6 +24,10 @@ ul {
   padding-left: 0px;
 }
 
+.datepicker {
+  z-index: 9999 !important;
+}
+
 /*#region Headers */
 
 .page-header {
